fixtures/valid/25-v0.10-minimal/input.anatomy
anatomy_version = "0.10"
tagline = "minimal v0.10 fixture — only required fields"

[identity]
stack = "javascript"
form = "library"
domain = "demo"
function = "minimal"
fingerprint = "kh3ybxthmht0yvvskye2"

[generated]
at = 2026-05-13T12:00:00.000Z
by = "anatomy-cli@0.13.0"
model = "none"
schema = "https://anatomy.dev/spec/0.10/schema.json"
